fixed iphone design issues

--- a/public/index.html
+++ b/public/index.html
@@ -37,27 +37,18 @@
  -->      
 			MESHINES
 			</a>
-<!--       <a class='toggle-nav btn pull-left' href='#'>
+      <a class='toggle-nav btn pull-left' href='#'>
         <i class='icon-reorder'></i>
       </a>
- -->
-      <ul class='nav'>
-			</ul>
 
-			<ul class="nav navbar-nav navbar-left">
-				<li class='divider'></li>
-				<!-- <li><a href="\"><i class="fa fa-home medium"></i> Home</a></li> -->
-				<li><a href="/"><i class="fa fa-home"></i> Home</a></li>
-				<li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
-				<li><a href="#contact"><i class="fa fa-comment"></i> Contact</a></li>
-			</ul>
-			<ul class="nav navbar-nav navbar-right">
+      <ul class='nav'>
+
 				<li class="auth"><a href="#login"><i class="fa fa-lock"></i> Sign In/Up</a></li>
 				<!-- <li><a href="#signup"><i class="fa fa-lock"></i> SignUp</a></li> -->
 
         <li class='dropdown dark user-menu' style="display:none">
           <a class='dropdown-toggle' data-toggle='dropdown' href='#'>
-            <!-- <img width="23" height="23" alt="Mila Kunis" src="assets/images/avatar.jpg" /> -->
+            <img width="23" height="23" alt="Mila Kunis" src="assets/images/avatar.jpg" />
             <span class='user-name'></span>
             <b class='caret'></b>
           </a>
@@ -103,6 +94,14 @@
 
 		<div ng-view></div>
 
+	</div>
+<!--  -->
+	<div id="footer" class="container">
+	    <nav class="navbar navbar-default navbar-fixed-bottom">
+	        <div class="navbar-inner navbar-content-center">
+	            <p class="text-muted credit">© 2014 Meshines, inc. <a href="#about"><i class="fa fa-shield"></i> About</a> | <a href="#contact"><i class="fa fa-comment"></i> Contact</a></p>
+	        </div>
+	    </nav>
 	</div>
 
   <script src="assets/javascripts/jquery/jquery.min.js" type="text/javascript"></script>
