fixed iphone design issues

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 	<title>E2E</title>
 
 	<!-- SCROLLS -->
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
   <link href="assets/stylesheets/light-theme.css" media="all" id="color-settings-body-color" rel="stylesheet" type="text/css" />
   <link href="assets/stylesheets/theme-colors.css" media="all" rel="stylesheet" type="text/css" />
@@ -48,7 +48,7 @@
 
         <li class='dropdown dark user-menu' style="display:none">
           <a class='dropdown-toggle' data-toggle='dropdown' href='#'>
-            <img width="23" height="23" alt="Mila Kunis" src="assets/images/avatar.jpg" />
+            <!-- <img width="23" height="23" alt="Mila Kunis" src="assets/images/avatar.jpg" /> -->
             <span class='user-name'></span>
             <b class='caret'></b>
           </a>
@@ -115,7 +115,8 @@
   <script src="assets/javascripts/plugins/jquery_ui_touch_punch/jquery.ui.touch-punch.min.js" type="text/javascript"></script>
   <script src="assets/javascripts/jquery/jquery.cookie.js"></script>
   <!-- / bootstrap [required] -->
-  <script src="assets/javascripts/bootstrap/bootstrap.js" type="text/javascript"></script>
+  <!-- // <script src="assets/javascripts/bootstrap/bootstrap.js" type="text/javascript"></script> -->
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
   <!-- / modernizr -->
   <script src="assets/javascripts/plugins/modernizr/modernizr.min.js" type="text/javascript"></script>
   <!-- / retina -->
