force page reload on oauth pages

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -47,13 +47,13 @@
                 <br />
             
                 <div class="row text-center">
-                  <a class="btn btn-fb" href="/auth/facebook">
+                  <a class="btn btn-fb" href="http://meshines.com/auth/facebook">
                     <span class="fa fa-facebook"> Facebook</span>
                   </a>
-                  <a class="btn btn-primary" href="/auth/twitter">
+                  <a class="btn btn-primary" href="http://meshines.com/auth/twitter">
                     <span class="fa fa-twitter"> Twitter</span>
                   </a>
-                  <a class="btn btn-danger" href="/auth/google">
+                  <a class="btn btn-danger" href="http://meshines.com/auth/google">
                     <span class="fa fa-google-plus"> Google+</span>
                   </a>
                 </div>
