fixed resources drop down and added menus

--- a/public/index.html
+++ b/public/index.html
@@ -64,14 +64,14 @@
               </a>
             </li>
             <li>
-              <a href='/profile'>
+              <a href='/services'>
                 <i class='icon-cog'></i>
-                Settings
+                Services
               </a>
             </li>
             <li class='divider'></li>
             <li>
-              <a href='http://meshines.com/logout'>
+              <a href='/logout' target='_self'>
                 <i class='icon-signout'></i>
                 Sign out
               </a>
