--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <link href='assets/images/meta_icons/apple-touch-icon-114x114.png' rel='apple-touch-icon-precomposed' sizes='114x114'>
   <link href='assets/images/meta_icons/apple-touch-icon-144x144.png' rel='apple-touch-icon-precomposed' sizes='144x144'>
 
-	<title>Meshines</title>
+	<!-- <title>Meshines</title> -->
 
 	<!-- SCROLLS -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
@@ -38,7 +38,7 @@
 <!--         <img width="81" height="21" class="logo" alt="Flatty" src="assets/images/logo.svg" />
         <img width="21" height="21" class="logo-xs" alt="Flatty" src="assets/images/logo_xs.svg" />
  -->      
-			MESHINES
+			SKYNET
 			</a>
       <a class='toggle-nav btn pull-left' href='#' style="display:none">
         <i class='icon-reorder'></i>
@@ -103,7 +103,7 @@
 	<div id="footer" class="container">
 	    <nav class="navbar navbar-default navbar-fixed-bottom">
 	        <div class="navbar-inner navbar-content-center">
-	            <p class="text-muted credit">© 2014 Meshines, inc. <a href="about"><i class="fa fa-shield"></i> About</a> | <a href="contact"><i class="fa fa-comment"></i> Contact</a></p>
+	            <p class="text-muted credit">  <a href="about"><i class="fa fa-shield"></i> About</a> | <a href="contact"><i class="fa fa-comment"></i> Contact</a></p>
 	        </div>
 	    </nav>
 	</div>
@@ -144,11 +144,8 @@
 
 	<!-- // <script src="core.js"></script> -->
 	<script src="script.js"></script>	
+  <script src="http://skynet.im/js/skynet.js"></script>
 
-	<!-- test data for dashboard -->
-	<script src="assets/javascripts/plugins/flot/excanvas.js" type="text/javascript"></script>
-  <script src="assets/javascripts/plugins/flot/flot.min.js" type="text/javascript"></script>
-  <script src="assets/javascripts/plugins/flot/flot.resize.js" type="text/javascript"></script>
 
 </body>
 </html>
