--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -18,7 +18,7 @@
           </a>
         </li>
         <li class=''>
-          <a class="" href="/designer"><i class='icon-edit'></i>
+          <a class="" href="/designer" target="_self"><i class='icon-edit'></i>
             <span>Designer</span>
           </a>
         </li>
@@ -100,6 +100,7 @@
             </div>
           </div>
           <p><strong>Your SkyNet UUID is:</strong> {{skynetuuid}}</p>
+
 <!--           <div class='alert alert-info alert-dismissable'>
             <a class='close' data-dismiss='alert' href='#'>&times;</a>
             Welcome to
@@ -244,4 +245,3 @@
     </div>
   </div>
 </div>
-
