fixed local login and signup

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -18,7 +18,7 @@
             <div class='row'>
               <div class='col-sm-4 col-sm-offset-4'>
                 <h1 class='text-center title'>Sign in</h1>
-                <form action="/login" method="post" class='validate-form'>
+                <form action="/login" method="post" class='validate-form' target="_self">
                   <div class='form-group'>
                     <div class='controls with-icon-over-input'>
                       <input value="" placeholder="E-mail" class="form-control" data-rule-required="true" name="email" type="text" />
