--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -18,7 +18,7 @@
             <div class='row'>
               <div class='col-sm-4 col-sm-offset-4'>
                 <h1 class='text-center title'>Sign up</h1>
-                <form action="/signup" method="post">
+                <form action="/signup" method="post" target="_self">
                   <div class='form-group'>
                     <div class='controls with-icon-over-input'>
                       <input value="" placeholder="E-mail" class="form-control" name="email" type="text" />
