--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -99,8 +99,11 @@
               </div>
             </div>
           </div>
-          <p><strong>Your SkyNet UUID is:</strong> {{skynetuuid}}</p>
 
+          <div>
+            <div class="pull-left"><strong>Your SkyNet UUID is:</strong> {{skynetuuid}}</div>
+            <div class="pull-right" ng-hide="skynetStatus" style="color:green;">Connected!</div>
+          </div><br />
 <!--           <div class='alert alert-info alert-dismissable'>
             <a class='close' data-dismiss='alert' href='#'>&times;</a>
             Welcome to
@@ -111,13 +114,21 @@
            <div class='row'>
             <div class='col-sm-6 box'>
               <div class='box-header'>
-                <div class='title'>
+                <div class='title pull-left'>
                   <i class='icon-lightbulb'></i>
                   Devices
                 </div>
+                <div class='pull-right'>
+                  <button ng-click="createDevice()">Add</button>
+                </div>
               </div>
               <div class="box-content">
-                <div id='stats-chart2'></div>
+                <div id='stats-chart2'>
+                  <ul ui-if="devices.length">
+                      <li ng-hide="devices.length">No devices found</li>
+                      <li ng-repeat="device in devices">{{device}}</li>
+                  </ul>                  
+                </div>
               </div>                                
             </div>
             <div class='col-sm-6 box'>
@@ -132,8 +143,18 @@
               </div>
             </div>
           </div>
+
+          <h3>Send Message</h3>
+          <div>
+            UUID: <input size="40" ng-model="sendUuid">
+            Message: <input size="40" ng-model="sendText">
+            <button ng-click="sendMessage()">Send</button>
+          </div>
+
+
           <!-- <hr class='hr-drouble'> -->
-          <div class='row'>
+
+<!--           <div class='row'>
             <div class='col-sm-12 col-md-6'>
               <div class='box'>
                 <div class='box-header'>
@@ -239,6 +260,7 @@
                 <br /><br /><br /><br />
               </div>
             </div>
+ -->          
           </div>
         </div>
       </div>
