--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -86,7 +86,7 @@
               <i class='icon-dashboard'></i>
               <span>Dashboard - {{user}}</span>              
             </h1>
-            <div class='pull-right'>
+<!--             <div class='pull-right'>
               <div class='btn-group'>
                 <a class="btn btn-white hidden-xs" href="#">Last month</a>
                 <a class="btn btn-white" href="#">Last week</a>
@@ -98,12 +98,15 @@
           
               </div>
             </div>
+ -->          
           </div>
 
           <div>
             <div class="pull-left"><strong>Your SkyNet UUID is:</strong> {{skynetuuid}}</div>
             <div class="pull-right" ng-hide="skynetStatus" style="color:green;">Connected!</div>
-          </div><br />
+          </div>
+
+          <br /><br />
 <!--           <div class='alert alert-info alert-dismissable'>
             <a class='close' data-dismiss='alert' href='#'>&times;</a>
             Welcome to
@@ -112,7 +115,7 @@
           </div>
  -->
            <div class='row'>
-            <div class='col-sm-6 box'>
+            <div class='col-sm-12 box'>
               <div class='box-header'>
                 <div class='title pull-left'>
                   <i class='icon-lightbulb'></i>
@@ -122,7 +125,15 @@
                   <button ng-click="createDevice()">Add</button>
                 </div>
               </div>
-              <div class="box-content">
+
+              <div ng-hide="devices.length">No devices found</div>
+              <table class="table table-striped table-responsive">
+                <tr ng-repeat="device in devices">
+                  <td>{{device}}</td><td><button ng-click="deleteDevice($index)">Delete</button></td>
+                </tr>
+              </table>
+
+<!--               <div class="box-content">
                 <div id='stats-chart2'>
                   <ul ui-if="devices.length">
                       <li ng-hide="devices.length">No devices found</li>
@@ -130,8 +141,9 @@
                   </ul>                  
                 </div>
               </div>                                
-            </div>
-            <div class='col-sm-6 box'>
+ -->         
+             </div>
+<!--             <div class='col-sm-6 box'>
               <div class='box-header'>
                 <div class='title'>
                   <i class='icon-bolt'></i>
@@ -142,6 +154,7 @@
                 <div id='stats-chart2'></div>
               </div>
             </div>
+ -->          
           </div>
 
           <h3>Send Message</h3>
