added nodered designer to site

--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -18,7 +18,7 @@
           </a>
         </li>
         <li class=''>
-          <a class="" href="/designer" target="_self"><i class='icon-edit'></i>
+          <a href="/designer"><i class='icon-edit'></i>
             <span>Designer</span>
           </a>
         </li>
@@ -163,7 +163,6 @@
             Message: <input size="40" ng-model="sendText">
             <button ng-click="sendMessage()">Send</button>
           </div>
-
 
           <!-- <hr class='hr-drouble'> -->
 
