--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 	<header>
 		<nav class="navbar navbar-default navbar-fixed-top">
       <a class='navbar-brand' href='/'>
-			MESHINES
+			OCTOBLU
 			</a>
       <a class='toggle-nav btn pull-left' href='#' style="display:none">
         <i class='icon-reorder'></i>
@@ -163,7 +163,7 @@
   <script src="assets/javascripts/plugins/validate/jquery.validate.min.js" type="text/javascript"></script>
   <script src="assets/javascripts/plugins/validate/additional-methods.js" type="text/javascript"></script>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
 
   <script src="assets/javascripts/bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
