--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 </head>
 <!-- SET THE CONTROLLER AND GET ALL TODOS WITH INITIALIZE FUNCTION -->
 <!-- <body ng-controller="mainController"> -->
-<body class='contrast-blue'>
+<body class='contrast-sea-blue'>
 
 	<header>
 		<nav class="navbar navbar-default navbar-fixed-top">
