--- a/public/pages/analytics.html
+++ b/public/pages/analytics.html
@@ -22,12 +22,33 @@
             <span>Designer</span>
           </a>
         </li>
-        <li>
-          <a class='active' href='/analytics'>
-            <i class='icon-cloud'></i>
+        <li class='active'>
+          <a  href='/analytics'>
+            <i class='icon-bar-chart'></i>
             <span>Analytics</span>
           </a>
         </li>
+        <li class="">
+          <a class='' href='/connector'>
+            <i class='icon-code-fork'></i>
+            <span>Connector</span>
+          </a>
+        </li>
+
+        <li>
+          <a class='' href='/controller'>
+            <i class='icon-cogs'></i>
+            <span>Controller</span>
+          </a>
+        </li>
+
+        <li>
+          <a class='' href='/community'>
+            <i class='icon-group'></i>
+            <span>Community</span>
+          </a>
+        </li>
+
 
         <li>
           <a class='' href='/admin'>
@@ -65,12 +86,6 @@
           </ul>
         </li>
 
-        <li>
-          <a class='' href='/community'>
-            <i class='icon-group'></i>
-            <span>Community</span>
-          </a>
-        </li>
 
 
       </ul>
@@ -80,7 +95,9 @@
     <div class='container'>
       <br /><br />
       
-      <iframe  width="100%" height="1000" ng-src="{{splunkFrame}}"></iframe>
+      <!-- <iframe  width="100%" height="1000" ng-src="{{splunkFrame}}"></iframe> -->
+      <img src="assets/images/splunk.png">
+
     </div>
   </section>
 </div>
