--- a/public/pages/community.html
+++ b/public/pages/community.html
@@ -17,18 +17,17 @@
             <span>Dashboard</span>
           </a>
         </li>
-        <li class='active'>
+        <li class=''>
           <a href="/designer"><i class='icon-edit'></i>
             <span>Designer</span>
           </a>
         </li>
-        <li>
-          <a class='' href='/analytics'>
+        <li class=''>
+          <a  href='/analytics'>
             <i class='icon-bar-chart'></i>
             <span>Analytics</span>
           </a>
         </li>
-
         <li class="">
           <a class='' href='/connector'>
             <i class='icon-code-fork'></i>
@@ -43,12 +42,13 @@
           </a>
         </li>
 
-        <li>
+        <li class="active">
           <a class='' href='/community'>
             <i class='icon-group'></i>
             <span>Community</span>
           </a>
         </li>
+
 
         <li>
           <a class='' href='/admin'>
@@ -95,9 +95,9 @@
     <div class='container'>
       <br /><br />
       
-      <iframe  width="100%" height="1000" ng-src="{{redFrame}}"></iframe>
-<!--       <iframe class="youtube-player" type="text/html" width="640" height="385" ng-src="{{trustSrc(redFrame)}}" allowfullscreen frameborder="0">
-</iframe>
- -->    </div>
+      <!-- <iframe  width="100%" height="1000" ng-src="{{splunkFrame}}"></iframe> -->
+      <img src="assets/images/conversations.png">
+
+    </div>
   </section>
 </div>
