--- a/public/pages/connector.html
+++ b/public/pages/connector.html
@@ -11,7 +11,7 @@
       </div>
  -->      
       <ul class='nav nav-stacked'>
-        <li class='active'>
+        <li class=''>
           <a href='/dashboard'>
             <i class='icon-dashboard'></i>
             <span>Dashboard</span>
@@ -28,8 +28,7 @@
             <span>Analytics</span>
           </a>
         </li>
-
-        <li class="">
+        <li class="active">
           <a class='' href='/connector'>
             <i class='icon-code-fork'></i>
             <span>Connector</span>
@@ -99,8 +98,8 @@
           
           <div class='page-header page-header-with-buttons'>
             <h1 class='pull-left'>
-              <i class='icon-dashboard'></i>
-              <span>Dashboard - {{user}}</span>              
+              <i class='icon-code-fork'></i>
+              <span>Connector - {{user}}</span>              
             </h1>
 <!--             <div class='pull-right'>
               <div class='btn-group'>
@@ -117,6 +116,75 @@
  -->          
           </div>
 
+          <ul class="nav nav-tabs">
+            <li class="active"><a href="#">Devices</a></li>
+            <li><a href="#">Gateways</a></li>
+            <li><a href="#">APIs</a></li>
+            <li><a href="#">Developer Tools</a></li>
+          </ul>          
+
+          <div>
+            <div class="pull-left"><strong>Your SkyNet UUID is:</strong> {{skynetuuid}}</div>
+            <div class="pull-right" ng-hide="skynetStatus" style="color:green;">Connected!</div>
+          </div>
+
+          <br /><br />
+<!--           <div class='alert alert-info alert-dismissable'>
+            <a class='close' data-dismiss='alert' href='#'>&times;</a>
+            Welcome to
+            <strong>MESHINES</strong>
+            - the Platform and API for the Internet of Things.
+          </div>
+ -->
+           <div class='row'>
+            <div class='col-sm-12 box'>
+              <div class='box-header'>
+                <div class='title pull-left'>
+                  <i class='icon-lightbulb'></i>
+                  Devices
+                </div>
+                <div class='pull-right'>
+                  <button ng-click="createDevice()">Add</button>
+                </div>
+              </div>
+
+              <div ng-hide="devices.length">No devices found</div>
+              <table class="table table-striped table-responsive">
+                <tr ng-repeat="device in devices">
+                  <td>{{device}}</td><td><button ng-click="deleteDevice($index)">Delete</button></td>
+                </tr>
+              </table>
+
+<!--               <div class="box-content">
+                <div id='stats-chart2'>
+                  <ul ui-if="devices.length">
+                      <li ng-hide="devices.length">No devices found</li>
+                      <li ng-repeat="device in devices">{{device}}</li>
+                  </ul>                  
+                </div>
+              </div>                                
+ -->         
+             </div>
+<!--             <div class='col-sm-6 box'>
+              <div class='box-header'>
+                <div class='title'>
+                  <i class='icon-bolt'></i>
+                  Activity
+                </div>
+              </div>
+              <div class='box-content'>
+                <div id='stats-chart2'></div>
+              </div>
+            </div>
+ -->          
+          </div>
+
+          <h3>Send Message</h3>
+          <div>
+            UUID: <input size="40" ng-model="sendUuid">
+            Message: <input size="40" ng-model="sendText">
+            <button ng-click="sendMessage()">Send</button>
+          </div>
 
           <!-- <hr class='hr-drouble'> -->
 
