--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -21,7 +21,7 @@
       <div class="slide-panel" data-in="top" data-out="top">
         <div id="spt-1" class="sptext">
           <span class="msg-ulysses">Welcome</span>
-          <span class="msg-welcome"> to Meshines</span>
+          <span class="msg-welcome"> to Octoblu</span>
 
         </div>
       </div>
@@ -53,7 +53,7 @@
         <div id="spt-5" class="sptext">
           <span class="msg-welcome">Welcome</span>
           <span class="msg-ulysses">to</span>
-          <span class="msg-welcome">Meshines</span>
+          <span class="msg-welcome">Octoblu</span>
         </div>
       </div>
       <div class="slide-panel" data-in="bottom" data-out="bottom">
@@ -81,7 +81,7 @@
       <div class="slide-panel" data-in="top" data-out="top">
         <div id="spt-5" class="sptext">
           <span class="msg-welcome">Welcome to </span>
-          <span class="msg-ulysses">Meshines</span>
+          <span class="msg-ulysses">Octoblu</span>
 
         </div>
       </div>
@@ -114,98 +114,34 @@
 
 <!-- ****************************************** ABOUT ****************************************** -->
 <div id="about" class="section">
-<h3 class="section-height">ABOUT MESHINES</h3>
+<h3 class="section-height">ABOUT OCTOBLU</h3>
 </div>
 
 <div class="container"><!--Container-->
   <div class="row"><!--Row-->
-    <div class="sub-section margin-top-50 col-md-10 col-md-offset-1">
-    <h2 class="sub-section-height">We love the<b class="color"> Internet of Things </b><br>and we have some <b>fantastic</b> and <b>big ideas</b> for you!</h2>
+    <!-- <div class="sub-section margin-top-50 col-md-10 col-md-offset-1"> -->
+    <div class="margin-top-50 col-md-10 col-md-offset-1">
+    <h2 class="sub-section-height">
+    <!-- <b class="color"> -->
+    <ul><li>
+    <p>Octoblu is a service for managing realtime connections and communications across different systems, people, and physical devices. </p>
+    </li><li>
+    <p>The service allows you to connect, design, control, and analyze the overall flow of information.</p>
+    </li><li>
+
+    <p>Octoblu simplifies management of complicated and numerous activities in one platform.</p>
+    </li></ul>
+
+    </h2>
+
     </div>
   </div><!--Row End-->
 </div><!--Container End-->
 
-<div class="margin-top-60 presentation-container"><!--iDevices Presentation-->
-  <div class="presentation visible-lg"><!--Safari Browser Back-->
-  <div class="s-a" data-effect="fromleft" data-delay="500"><!--Animation-->
-    <img id="p-1" src="/assets/images/safari-browser-back.png" />
-  </div><!--Animation End-->
-  </div><!--Safari Browser-->
-  <div class="presentation"><!--Safari Browser Back End-->
-  <div class="s-a" data-effect="frombottom" data-delay="0"><!--Animation-->
-    <img id="p-2" src="/assets/images/safari-browser.png" />
-  </div><!--Animation End-->
-  </div><!--Safari Browser End-->
-  <div class="presentation visible-md visible-lg"><!--iPad-->
-  <div class="s-a" data-effect="fromleft" data-delay="1000"><!--Animation-->
-    <img id="p-3" src="/assets/images/ipad-presentation.png" /> 
-  </div><!--Animation End-->
-  </div><!--iPad End-->
-  <div class="presentation visible-sm visible-md visible-lg"><!--iPhone-->
-  <div class="s-a" data-effect="fromright" data-delay="1000"><!--Animation-->
-    <img id="p-4" src="/assets/images/iphone-presentation.png" /> 
-  </div><!--Animation End-->
-  </div><!--iPhone End-->
-</div><!--iDevices Presentation End-->
-
-<div class="container"><!--Container-->
-
-  <div class="row"><!--Row-->
-    <div class="col-md-5 margin-top-100"><!--Nav Tabs-->
-            <ul class="nav nav-tabs" id="navtabs_menu">
-              <li><a href="#first" data-toggle="tab">Normal Title</a></li>
-              <li><a href="#second" data-toggle="tab"><i class="fa fa-magic fa-lg" style="margin-right: 5px;"></i>Title with Icon</a></li>
-              <li><a href="#third" data-toggle="tab"><i class="fa fa-anchor fa-lg"></i></a></li>
-              <div id="navtabs_menubar"></div>
-            </ul>
-      <div class="tab-content tabs-paragraph paragraph">
-        <div class="tab-pane fade in active" id="first">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed facilisis elementum urna in faucibus. Cras ut semper turpis. Fusce non elementum nunc. Morbi faucibus dui eu elementum hendrerit. Nam quis egestas nulla.</div>
-        <div class="tab-pane fade" id="second">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.</div>
-        <div class="tab-pane fade" id="third">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</div>
-      </div>
-   </div><!--Nav Tabs End-->
-   <div id="skills" class="col-md-6 col-md-offset-1 margin-top-90"><!--Progress Bars-->
-        <h3 class="color">Our Skills</h3>
-        <p class="paragraph">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum.</p>
-      <div class="progress">
-        <div class="progress-bar" data-final="70">70% Complete</div>
-      </div>
-      <div class="progress">
-        <div class="progress-bar" data-final="50">50% Complete</div>
-      </div>
-      <div class="progress">
-        <div class="progress-bar" data-final="90">90% Complete</div>
-      </div><!--Progress Bars End-->
-    </div>
-  </div><!--Row End-->
-
-  <div class="row"><!--Row--><!--Call To Action Start-->
-  <div class="col-md-12 margin-top-100">
-    <div class="cta-border">
-      <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8" style="padding: 20px 0px;">
-        <div class="cta-content">
-          <div>
-            <div class="s-a" data-effect="fromleft" data-delay="0"><!--Animation-->
-            <h2 class="cta-title">Your call to action here</h2>
-            </div><!--Animation End-->
-          </div>
-          <div>
-            <div class="s-a" data-effect="frombottom" data-delay="100"><!--Animation-->
-            <p class="cta-paragraph">Proin gravida nibh vel velit auctor aliquet, aenean sollicitudin.</p>
-            </div><!--Animation End-->
-          </div>
-        </div>
-        <div class="cta-content-button">
-          <div class="s-a" data-effect="fromright" data-delay="200"><!--Animation-->
-          <a type="button" class="btn btn-primary btn-lg cta-button" href="/login"><i class="fa fa-chevron-right btn-margin-icon"></i><b>Sign Up Now</b></a>
-          </div><!--Animation End-->
-        </div>
-      </div>
-    </div>
-  </div>
-</div><!--Row End--><!--Call To Action End-->
-
-
+<!-- <div class="margin-top-60 presentation-container">
+</div>
+ -->
+<div class="container margin-top-50"><!--Container-->
 </div><!--Container End-->
 
             
@@ -214,7 +150,7 @@
 
 
 <!-- ****************************************** SERVICES ****************************************** -->
-<div id="services" class="section margin-top-100">
+<div id="services" class="section">
 <h3 class="section-height">SERVICES</h3>
 </div>
 
@@ -228,117 +164,77 @@
     <!--ICON 1-->
     <div class="col-md-3 col-md-offset-0 col-xs-8 col-xs-offset-2 ticket" style="display: block;">
       <div class="s-a" data-effect="frombottom"><!--Animation-->
-        <i class="fa fa-users fa-4x"></i>
-        <h4 class="parallax-title">Help & Support</h4>
-        <p class="parallax-icon-paragraph">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum.</p>
+        <i class="fa fa-code-fork fa-4x"></i>
+        <h2 class="parallax-title">Connect</h2>
+        <p class="parallax-icon-paragraph">Easily connect devices, people, and systems to a powerful coordination and communications platform.</p>
       </div><!--Animation End-->
     </div>
     <!--END ICON 1--> 
     <!--ICON 2-->
     <div class="col-md-3 col-md-offset-0 col-xs-8 col-xs-offset-2 ticket">
       <div class="s-a" data-effect="frombottom" data-delay="100"><!--Animation-->
-        <i class="fa fa-smile-o fa-4x"></i>
-        <h4 class="parallax-title">Icon Title</h4>
-        <p class="parallax-icon-paragraph">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum.</p>
+        <i class="fa fa-edit fa-4x"></i>
+        <h2 class="parallax-title">Design</h2>
+        <p class="parallax-icon-paragraph">Intuitively design simple to complex process through a simple drag and drop user interface.</p>
       </div><!--Animation End-->
     </div>
     <!--END ICON 2-->
     <!--ICON 3-->
     <div class="col-md-3 col-md-offset-0 col-xs-8 col-xs-offset-2 ticket">
       <div class="s-a" data-effect="frombottom" data-delay="200"><!--Animation-->
-        <i class="fa fa-info-circle fa-4x"></i>
-        <h4 class="parallax-title">Clean Guides</h4>
-        <p class="parallax-icon-paragraph">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum.</p>
+        <i class="fa fa-cogs fa-4x"></i>
+        <h2 class="parallax-title">Control</h2>
+        <p class="parallax-icon-paragraph">Powerfully control events, processes, and delivery of information through realtime communications.</p>
       </div><!--Animation End-->
     </div>
     <!--END ICON 3-->
     <!--ICON 4-->
     <div class="col-md-3 col-md-offset-0 col-xs-8 col-xs-offset-2 ticket">
       <div class="s-a" data-effect="frombottom" data-delay="300"><!--Animation-->
-        <i class="fa fa-rocket fa-4x"></i>
-        <h4 class="parallax-title">Lift Off</h4>
-        <p class="parallax-icon-paragraph">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum.</p>
+        <i class="fa fa-bar-chart-o fa-4x"></i>
+        <h2 class="parallax-title">Analyze</h2>
+        <p class="parallax-icon-paragraph">Quickly analyze all aspects of activities and trends through advanced search and reporting tools.</p>
       </div><!--Animation End-->
+      <br/><br/>
     </div>
     <!--END ICON 4--> 
+
+    <div class="row cta-border">
+      <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8" style="padding: 20px 0px;">
+        <div class="cta-content">
+          <div>
+            <div class="s-a" data-effect="fromleft" data-delay="0"><!--Animation-->
+            <h2 class="cta-title">Experience the power!</h2>
+            </div><!--Animation End-->
+          </div>
+          <div>
+            <div class="s-a" data-effect="frombottom" data-delay="100"><!--Animation-->
+            <p class="cta-paragraph">Get started building your Internet of Things project now!</p>
+            </div><!--Animation End-->
+          </div>
+        </div>
+        <div class="cta-content-button">
+          <div class="s-a" data-effect="fromright" data-delay="200"><!--Animation-->
+          <a type="button" class="btn btn-primary btn-lg cta-button" href="/login"><i class="fa fa-chevron-right btn-margin-icon"></i><b>Sign Up Now</b></a>
+          </div><!--Animation End-->
+        </div>
+      </div>
+    </div>
+
 </div><!--Row End-->
+
+
+
 </div><!--Container End-->
 </div><!--parallax-inner End-->
 </div><!--parallax1 End-->
 <!-- ****************************************** PARALLAX ICONS END ****************************************** -->
 
-<div class="container margin-top-100-res"><!--Container-->
-
-<div class"row"><!--Row-->
-  <div class="col-lg-4 visible-lg">
-    <div class="s-a" data-effect="fromleft"><!--Animation-->
-      <img src="/assets/images/iphone-stand.png" width="100%">
-    </div><!--Animation End-->
-  </div>
-  <div class="col-lg-4 col-md-6 col-xs-8 col-xs-offset-2 col-md-offset-0"><!--Column Open-->
-    <div class="s-a" data-effect="fromright" data-delay="100"><!--Animation-->
-      <div class="icon-container margin-top-60"><!--Icon 1-->
-        <i class="fa fa-magic fa-2x icon-one"></i>
-        <i class="fa fa-smile-o fa-2x icon-two"></i>
-        <div class="icon-box">
-        <h4 class="color">Dynamic Icon Title</h4>
-        <p class="icon-paragraph">Proin gravida nibh vel velit auctor ali. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum.</p>
-        </div>
-      </div><!--Icon 1 End-->
-      <div class="icon-container margin-top-60"><!--Icon 2-->
-        <i class="fa fa-question fa-2x icon-one"></i>
-        <i class="fa fa-info-circle fa-2x icon-two"></i>
-        <div class="icon-box">
-        <h4 class="color">Clean Guides</h4>
-        <p class="icon-paragraph">Proin gravida nibh vel velit auctor aliq. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum.</p>
-        </div>
-      </div><!--Icon 2 End-->
-      <div class="icon-container margin-top-60"><!--Icon 3-->
-        <i class="fa fa-user fa-2x icon-one"></i>
-        <i class="fa fa-users fa-2x icon-two"></i>
-        <div class="icon-box">
-        <h4 class="color">Help & Support</h4>
-        <p class="icon-paragraph">Proin gravida nibh vel velit auctor aliqu. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum.</p>
-        </div>
-      </div><!--Icon 3 End-->
-    </div><!--Animation End-->
-  </div><!--Column Close-->
-  <div class="col-lg-4 col-md-6 col-xs-8 col-xs-offset-2 col-md-offset-0"><!--Column Open-->
-    <div class="s-a" data-effect="fromright" data-delay="300"><!--Animation-->
-      <div class="icon-container margin-top-60"><!--Icon 4-->
-        <i class="fa fa-plane fa-2x icon-one"></i>
-        <i class="fa fa-rocket fa-2x icon-two"></i>
-        <div class="icon-box">
-        <h4 class="color">Lift Off</h4>
-        <p class="icon-paragraph">Proin gravida nibh vel velit auctor aliq. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum.</p>
-        </div>
-      </div><!--Icon 4 End-->
-      <div class="icon-container margin-top-60"><!--Icon 5-->
-        <i class="fa fa-leaf fa-2x icon-one"></i>
-        <i class="fa fa-refresh fa-2x icon-two"></i>
-        <div class="icon-box">
-        <h4 class="color">Green Design</h4>
-        <p class="icon-paragraph">Proin gravida nibh vel velit auctor aliq. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum.</p>
-        </div>
-      </div><!--Icon 5 End-->
-      <div class="icon-container margin-top-60"><!--Icon 6-->
-        <i class="fa fa-lock fa-2x icon-one"></i>
-        <i class="fa fa-unlock fa-2x icon-two"></i>
-        <div class="icon-box">
-        <h4 class="color">Buy & Start</h4>
-        <p class="icon-paragraph">Proin gravida nibh vel velit auctor aliq. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum.</p>
-        </div>
-      </div><!--Icon 6 End-->
-    </div><!--Animation End-->
-  </div><!--Column Close-->
-</div><!--Row End-->
-
-</div><!--Container End-->
 
 <div class="pricing-bg">
 <div class="container"><!--Container-->
   <div class="row margin-top-40"><!--Row-->
-    <h3 class="pricing-bg-title">
+    <h3 class="pricing-bg-title" style="color:black">
       Simple prices that <span class="dashed-border">scale</span> as you need.
     </h3>
   </div>
@@ -609,12 +505,12 @@
   <div class="footer-content">
     <h3 class="section-height"><span class="dashed-border">FOLLOW US</span> USING THE SOCIAL YOU LIKE</h3>
     <div class="margin-top-30">
-      <a href="http://facebook.com/meshinesnet" class="footer-icon"><i class="fa fa-facebook fa-2x"></i></a>
-      <a href="http://twitter.com/meshinesnet" class="footer-icon"><i class="fa fa-twitter fa-2x"></i></a>
-      <a href="#" class="footer-icon"><i class="fa fa-google-plus fa-2x"></i></a>
+      <a href="http://facebook.com/octoblu" class="footer-icon"><i class="fa fa-facebook fa-2x"></i></a>
+      <a href="http://twitter.com/octoblu" class="footer-icon"><i class="fa fa-twitter fa-2x"></i></a>
+      <a href="octoblu" class="footer-icon"><i class="fa fa-google-plus fa-2x"></i></a>
       <a href="http://github.com/skynetim" class="footer-icon"><i class="fa fa-github-alt fa-2x"></i></a>
     </div>
   </div>
-  <div class="footer-copyright text-center">© 2014 - All Rights Reserved. Meshines, Inc.</div>
+  <div class="footer-copyright text-center">© 2014 - All Rights Reserved. Octoblu, Inc.</div>
 </div>
 <!-- ****************************************** CONTACT END ****************************************** -->
