hid secure menu

--- a/public/index.html
+++ b/public/index.html
@@ -88,8 +88,9 @@
 
 	<!-- MAIN CONTENT AND INJECTED VIEWS -->
 	<div id="main">
+
     <div id='main-nav-bg'></div>
-      <nav id='main-nav'>
+      <nav id='main-nav' style="display:none;">
         <div class='navigation'>
    
           <ul class='nav nav-stacked'>
