--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
 	<!-- MAIN CONTENT AND INJECTED VIEWS -->
 	<div id="main">
 
-    <div id='main-nav-bg'></div>
+    <div id='main-nav-bg' style="display:none;"></div>
       <nav id='main-nav' style="display:none;">
         <div class='navigation'>
    
