--- a/public/pages/connector.html
+++ b/public/pages/connector.html
@@ -51,14 +51,53 @@
                 Devices
               </div>
               <div class='pull-right'>
-                <button ng-click="createDevice()">Add</button>
+                <!-- <button ng-click="createDevice()">Add</button> -->
+
+                <button ng-click="addDevice = true" class="btn btn-primary" ng-hide="addDevice">
+                  <i class="icon-chevron-down"></i> Add Device
+                </button>
+                <button ng-click="addDevice = false" class="btn btn-primary" ng-show="addDevice">
+                  <i class="icon-chevron-up"></i> Cancel
+                </button>
+
               </div>
             </div>
 
+            <div class="col-sm-12" ng-show="addDevice">
+              <h3>Add Device</h3>   
+            <form name="myForm">          
+              <input class="form-control" name="deviceName" ng-model="deviceName" placeholder="Device Name" required><br />
+
+              <div ng-repeat="key in keys" class="form-inline">
+                <div class="form-group">
+                  <input class="form-control" ng-model="key.key" placeholder="Key">
+                </div>
+                <div class="form-group">
+                  <input class="form-control" ng-model="key.value" placeholder="Value">
+                </div>
+                <a href ng-click="addKeyVals()"> <i class="icon-plus"></i></a>
+
+              </div>
+
+              <br /><br />
+              <button class="btn" ng-click="createDevice()">Create</button>  
+              <br /><br />            
+            </form>
+            </div>
+
+
             <div ng-hide="devices.length">No devices found</div>
-            <table class="table table-striped table-responsive">
+            <table class="table table-striped table-responsive table-hover">
               <tr ng-repeat="device in devices">
-                <td>{{device}}</td><td><button ng-click="deleteDevice($index)">Delete</button></td>
+                <!-- <td>{{device}}</td><td><button class="btn btn-danger" ng-click="deleteDevice($index)">Delete</button></td> -->
+                <td>{{device.name}}</td>
+                <td>{{device.uuid}}</td>
+                <td>{{device.token}}</td>
+                <td>
+                  <a ng-click="moreInfo = true" ng-hide="moreInfo">more...</a>
+                  <a ng-click="moreInfo = false" ng-show="moreInfo">{{device}}</a>
+                </td>
+                <td><button class="btn btn-danger" ng-click="deleteDevice($index)">Delete</button></td>
               </tr>
             </table>
 
@@ -201,4 +240,3 @@
     </div>
   </div>
 </section>
-
