fixed iframe height to match page height

--- a/public/pages/admin.html
+++ b/public/pages/admin.html
@@ -5,8 +5,8 @@
         
         <div class='page-header page-header-with-buttons'>
           <h1 class='pull-left'>
-            <i class='icon-user'></i>
-            <span>Profile - {{user}}</span>              
+            <i class='icon-lock'></i>
+            <span>Admin - {{user}}</span>              
           </h1>        
         </div>
       
