--- a/public/pages/designer.html
+++ b/public/pages/designer.html
@@ -1,6 +1,9 @@
 <section id='content'>
   <div class='container'>
     <br /><br />    
-    <iframe  width="100%" height="1000" ng-src="{{redFrame}}"></iframe>
+    <iframe  width="100%" ng-src="{{redFrame}}" marginheight="0" frameborder="0" height="100px" id="designerFrame"></iframe>    
   </div>
 </section>
+<script>
+$('#designerFrame').attr('height',$("body").height()-50)
+</script>
