add on resize event to fix designer

--- a/public/pages/analyzer.html
+++ b/public/pages/analyzer.html
@@ -2,8 +2,8 @@
   <div class='container'>
     <br /><br />
     
-    <!-- <iframe  width="100%" height="1000" ng-src="{{splunkFrame}}"></iframe> -->
-    <img src="assets/images/splunk.png">
+    <iframe  width="100%" height="1000" ng-src="{{splunkFrame}}"></iframe>
+    <!-- <img src="assets/images/splunk.png"> -->
 
   </div>
 </section>
