added device edit and formatting on controller

--- a/public/pages/analyzer.html
+++ b/public/pages/analyzer.html
@@ -5,8 +5,8 @@
   </div>
 </section>
 <script>
-$('#splunkFrame').attr('height',$("body").height()-50)
-window.onresize = function(event) {
-  $('#splunkFrame').attr('height',$("body").height()-50);
-}
+// $('#splunkFrame').attr('height',$("body").height()-50)
+// window.onresize = function(event) {
+//   $('#splunkFrame').attr('height',$("body").height()-50);
+// }
 </script>
