--- a/public/pages/controller.html
+++ b/public/pages/controller.html
@@ -8,11 +8,22 @@
       </h1>
     </div>
 
-    <h3>Send Message</h3>
-    <div>
-      UUID: <input size="40" ng-model="sendUuid">
-      Message: <input size="40" ng-model="sendText">
-      <button ng-click="sendMessage()">Send</button>
+    <h2>Send Message</h2><br />
+
+    <div class="form-inline">
+      <div class="form-group">
+        <select ng-model="device" ng-options="device.name for device in devices" class="form-control"></select>
+      </div>
+      <div class="form-group"> OR </div>
+      <div class="form-group">
+        <input size="40" ng-model="sendUuid" class="form-control" placeholder="UUID">
+      </div>
+      <br /><br />
+      <input ng-model="sendText" class="form-control" placeholder="Message">
+      <br /><br />
+      <button ng-click="sendMessage()" class="btn btn-primary">Send</button>
+      <span style="color:green;">{{messageOutput}}</span><br />
+      <br /><br />
     </div>
 
 
