added chart to dashboard

--- a/public/pages/controller.html
+++ b/public/pages/controller.html
@@ -7,6 +7,7 @@
         <span>Controller</span>              
       </h1>
     </div>
+    <div class="pull-left"><strong>Your UUID is:</strong> {{skynetuuid}}</div><br />
 
     <h2>Send Message</h2><br />
 
