--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -8,133 +8,19 @@
             <i class='icon-dashboard'></i>
             <span>Dashboard - {{user}}</span>              
           </h1>
-<!--             <div class='pull-right'>
-            <div class='btn-group'>
-              <a class="btn btn-white hidden-xs" href="#">Last month</a>
-              <a class="btn btn-white" href="#">Last week</a>
-              <a class="btn btn-white " href="#">Today</a>
-                    <a class="btn btn-white" id="daterange" href="#"><i class='icon-calendar'></i>
-              <span>Custom</span>
-              <b class='caret'></b>
-              </a>
-        
-            </div>
-          </div>
--->          
+        </div>
+        <div class="pull-left"><strong>Your UUID is:</strong> {{skynetuuid}}</div><br /><br />
+
+
+        <div id="chartContainer" style="height: 300px; width:100%;"></div>
+        <br />
+        <div class='box-content box-statistic'>
+          <h3 class='title text-primary'>{{devices.length}}</h3>
+          <small>Devices</small>
+          <div class='text-primary icon-lightbulb align-right'></div>
         </div>
 
-
-        <!-- <hr class='hr-drouble'> -->
-
-<!--           <div class='row'>
-          <div class='col-sm-12 col-md-6'>
-            <div class='box'>
-              <div class='box-header'>
-                <div class='title'>
-                  <div class='icon-inbox'></div>
-                  Orders
-                </div>
-              </div>
-              <div class='row'>
-                <div class='col-sm-6'>
-                  <div class='box-content box-statistic'>
-                    <h3 class='title text-error'>191</h3>
-                    <small>New</small>
-                    <div class='text-error icon-inbox align-right'></div>
-                  </div>
-                  <div class='box-content box-statistic'>
-                    <h3 class='title text-warning'>311</h3>
-                    <small>In process</small>
-                    <div class='text-warning icon-check align-right'></div>
-                  </div>
-                  <div class='box-content box-statistic'>
-                    <h3 class='title text-info'>3</h3>
-                    <small>Pending</small>
-                    <div class='text-info icon-time align-right'></div>
-                  </div>
-                </div>
-                <div class='col-sm-6'>
-                  <div class='box-content box-statistic'>
-                    <h3 class='title text-primary'>3</h3>
-                    <small>Shipped</small>
-                    <div class='text-primary icon-truck align-right'></div>
-                  </div>
-                  <div class='box-content box-statistic'>
-                    <h3 class='title text-success'>981</h3>
-                    <small>Completed</small>
-                    <div class='text-success icon-flag align-right'></div>
-                  </div>
-                  <div class='box-content box-statistic'>
-                    <h3 class='title text-muted'>0</h3>
-                    <small>Canceled</small>
-                    <div class='text-muted icon-remove align-right'></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class='col-sm-6 col-md-3'>
-            <div class='box'>
-              <div class='box-header'>
-                <div class='title'>
-                  <i class='icon-group'></i>
-                  Visitors
-                </div>
-              </div>
-              <div class='row'>
-                <div class='col-sm-12'>
-                  <div class='box-content box-statistic'>
-                    <h3 class='title text-error'>9100</h3>
-                    <small>Unique</small>
-                    <div class='text-error icon-user align-right'></div>
-                  </div>
-                  <div class='box-content box-statistic'>
-                    <h3 class='title text-warning'>41 000</h3>
-                    <small>Pageviews</small>
-                    <div class='text-warning icon-book align-right'></div>
-                  </div>
-                  <div class='box-content box-statistic'>
-                    <h3 class='title text-primary'>12:21</h3>
-                    <small>Average time</small>
-                    <div class='text-primary icon-time align-right'></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class='col-sm-6 col-md-3'>
-            <div class='box'>
-              <div class='box-header'>
-                <div class='title'>
-                  <i class='icon-comments'></i>
-                  Comments
-                </div>
-              </div>
-              <div class='row'>
-                <div class='col-sm-12'>
-                  <div class='box-content box-statistic'>
-                    <h3 class='title text-error'>91</h3>
-                    <small>New</small>
-                    <div class='text-error icon-plus align-right'></div>
-                  </div>
-                  <div class='box-content box-statistic'>
-                    <h3 class='title text-success'>1</h3>
-                    <small>Approved</small>
-                    <div class='text-success icon-ok align-right'></div>
-                  </div>
-                  <div class='box-content box-statistic'>
-                    <h3 class='title text-info'>123</h3>
-                    <small>Pending</small>
-                    <div class='text-info icon-time align-right'></div>
-                  </div>
-                </div>
-              </div>
-              <br /><br /><br /><br />
-            </div>
-          </div>
--->          
-        </div>
       </div>
     </div>
   </div>
-</div>
+</section>
