--- a/public/index.html
+++ b/public/index.html
@@ -221,6 +221,8 @@
   <script src="assets/javascripts/athenaSlide.js"></script>
   <script src="assets/javascripts/demeterScroll.js"></script>
 
+  <script type="text/javascript" src="assets/javascripts/canvasjs.min.js"></script>
+
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
