upgraded twitter bootstrap

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
 	<title>Octoblu</title>
 
 	<!-- SCROLLS -->
-	<!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"> -->
-  <link href="assets/stylesheets/bootstrap.min.css" rel="stylesheet" media="screen">
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
+  <!-- <link href="assets/stylesheets/bootstrap.min.css" rel="stylesheet" media="screen"> -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
   <link href="assets/stylesheets/light-theme.css" media="all" id="color-settings-body-color" rel="stylesheet" type="text/css" />
   <link href="assets/stylesheets/theme-colors.css" media="all" rel="stylesheet" type="text/css" />
@@ -46,6 +46,11 @@
       from { opacity:0; }
       to { opacity:1; }
     }
+     @media (min-width: 1200px) {
+        .container {
+         width: 100%;
+        }
+      }    
   </style>
 
 </head>
@@ -213,7 +218,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-animate.js"></script>
 
   <script src="assets/javascripts/bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
-  <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 
 	<script src="script.js"></script>	
   <script src="http://skynet.im/js/skynet.js"></script>
