--- a/public/pages/community.html
+++ b/public/pages/community.html
@@ -29,13 +29,13 @@
     </script>
     -->
 
-    <br /><br />
+    <!-- <div id="vanilla-comments"></div> -->
 
 
 
   </div>
 </section>
-
-<script type="text/javascript" src="http://octoblu.vanillaforums.com/js/embed.js"></script>
+<!-- <script type="text/javascript" src="http://octoblu.vanillaforums.com/js/embed.js"></script>
 <noscript>Please enable JavaScript to view the <a href="http://vanillaforums.com/?ref_noscript">discussions powered by Vanilla.</a></noscript>
 <div class="vanilla-credit"><a class="vanilla-anchor" href="http://vanillaforums.com">Discussions by <span class="vanilla-logo">Vanilla</span></a></div>
+ -->
