refactored angular code, added .gitignore

--- a/public/index.html
+++ b/public/index.html
@@ -220,7 +220,9 @@
   <script src="assets/javascripts/bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 
-	<script src="script.js"></script>	
+	<script src="/angular/app.js"></script>	
+  <script src="/angular/services.js"></script>  
+  <script src="/angular/controllers.js"></script>
   <script src="http://skynet.im/js/skynet.js"></script>
 
   <script src="assets/javascripts/athenaSlide.js"></script>
