adding directive for tooltips

--- a/public/index.html
+++ b/public/index.html
@@ -223,6 +223,7 @@
 	<script src="/angular/app.js"></script>	
   <script src="/angular/services.js"></script>  
   <script src="/angular/controllers.js"></script>
+  <script src="/angular/directives.js"></script>
   <script src="http://skynet.im/js/skynet.js"></script>
 
   <script src="assets/javascripts/athenaSlide.js"></script>
