--- a/public/pages/apis.html
+++ b/public/pages/apis.html
@@ -1,16 +1,15 @@
 <div class="jumbotron text-center">
-  <p><img src="assets/images/robots/robot2.png" width="200"></p>
-  <h1>API Directory</h1>
 
-<!--   <ul class="channellist">
+  <ul class="channellist">
 
-  	<li ng-repeat="channel in channelList" class="channel_icon-grid-view mod-index-0">
+  	<li ng-repeat="channel in channelList" class="channel_icon-grid-view mod-index-0 pop-over"
+	  	data-original-title="{{channel.details}}" data-placement="auto">
 		<div class="channel is-inactive" id="channel_83">
-			<a href="/500px">
+			<a href="#">
 				<img alt="500px" class="channel-icon is-size-110  is-using-gray-url" 
 					height="110" src="https://ifttt.com/images/channels_bw/500px.png" width="110">
 			</a>
-			<a href="/500px">
+			<a href="#">
 				<div class="channel_title">{{channel.name}}</div>
 				<div></div>
 			</a>
@@ -18,6 +17,6 @@
 
 	</li>
 
-  </ul> -->
+  </ul>
 
 </div>
