--- a/public/pages/connector.html
+++ b/public/pages/connector.html
@@ -13,13 +13,13 @@
           <li ng-class="{active: activeTab == 'devices'}" id="devices">
             <a ng-click="activeTab = 'devices'" href="">Devices</a>
           </li>
-          <li ng-class="{active: activeTab == 'gateways'}">
+          <li ng-class="{active: activeTab == 'gateways'}" id="gateways">
             <a ng-click="activeTab = 'gateways'" href="">Gateways</a>
           </li>
-          <li ng-class="{active: activeTab == 'apis'}">
+          <li ng-class="{active: activeTab == 'apis'}" id="apis">
             <a ng-click="activeTab = 'apis'" href="">APIs</a>
           </li>
-          <li ng-class="{active: activeTab == 'devtools'}">
+          <li ng-class="{active: activeTab == 'devtools'}" id="devtools">
             <a ng-click="activeTab = 'devtools'" href="">Developer Tools</a>
           </li>
         </ul>
