added api model, adjusted channel service json sample

--- a/public/pages/apis.html
+++ b/public/pages/apis.html
@@ -3,7 +3,7 @@
   <ul class="channellist">
 
   	<li ng-repeat="channel in channelList" class="channel_icon-grid-view mod-index-0 pop-over"
-	  	data-original-title="{{channel.details}}" data-placement="auto">
+	  	data-original-title="{{channel.description}}" data-placement="auto">
 		<div class="channel is-inactive" id="channel_83">
 			<a href="#">
 				<img alt="500px" class="channel-icon is-size-110  is-using-gray-url" 
