moved image source to json

--- a/public/pages/apis.html
+++ b/public/pages/apis.html
@@ -7,7 +7,7 @@
 		<div class="channel is-inactive" id="channel_83">
 			<a href="#">
 				<img alt="500px" class="channel-icon is-size-110  is-using-gray-url" 
-					height="110" src="https://ifttt.com/images/channels_bw/500px.png" width="110">
+					height="110" src="{{channel.logo}}" width="110">
 			</a>
 			<a href="#">
 				<div class="channel_title">{{channel.name}}</div>
