deployed without branding for demo

--- a/public/pages/analyzer.html
+++ b/public/pages/analyzer.html
@@ -1,7 +1,7 @@
 <section id='content'>
   <div class='container'>
     <br /><br />    
-    <iframe  width="100%" height="1000" ng-src="{{splunkFrame}}" id="splunkFrame"></iframe>
+    <iframe  width="100%" height="1000" src="http://54.203.249.138:8000?output=embed" id="splunkFrame"></iframe>
   </div>
 </section>
 <script>
