--- a/public/pages/community.html
+++ b/public/pages/community.html
@@ -1,41 +1,15 @@
 <section id='content'>
   <div class='container'>
-    <br/><br/>
-    <div class='page-header page-header-with-buttons'>
-      <h1 class='pull-left'>
-        <i class='icon-group'></i>
-        <span>Community</span>              
-      </h1>
-    </div>
-    <!-- <img src="assets/images/conversations.png"> -->
-
-    <!-- Google Groups -->
-    <!-- <iframe id="forum_embed"
-      src="javascript:void(0)"
-      scrolling="no"
-      frameborder="0"
-      width="100%"
-      height="100">
-    </iframe>
-    <script type="text/javascript">
-      document.getElementById('forum_embed').src =
-         'https://groups.google.com/forum/embed/?place=forum/octoblu'
-         + '&showsearch=true&showpopout=true&showtabs=false';
-
-    $('#forum_embed').attr('height',$("body").height()-50)
-    window.onresize = function(event) {
-      $('#forum_embed').attr('height',$("body").height()-50);
-    }     
-    </script>
-    -->
-
-    <!-- <div id="vanilla-comments"></div> -->
-
-
-
+    <br /><br />    
+    <iframe  width="100%" height="1000" src="http://bfa4d4e0-694e-459b-9702-e2a6232d7f89.sitebuilder.vbulletin.com/" id="communityFrame"></iframe>
   </div>
 </section>
-<!-- <script type="text/javascript" src="http://octoblu.vanillaforums.com/js/embed.js"></script>
-<noscript>Please enable JavaScript to view the <a href="http://vanillaforums.com/?ref_noscript">discussions powered by Vanilla.</a></noscript>
-<div class="vanilla-credit"><a class="vanilla-anchor" href="http://vanillaforums.com">Discussions by <span class="vanilla-logo">Vanilla</span></a></div>
- -->
+<script>
+$('#communityFrame').attr('height',$("body").height()-50)
+window.onresize = function(event) {
+  $('#communityFrame').attr('height',$("body").height()-50);
+}
+</script>
+
+
+
