switched to pulling api's from mongo

--- a/public/pages/apis.html
+++ b/public/pages/apis.html
@@ -6,8 +6,8 @@
 	  	data-original-title="{{channel.description}}" data-placement="auto" ng-click="openDetails(channel)">
 		<div class="channel is-inactive" id="channel_83">
 			<a href="#">
-				<img alt="500px" class="channel-icon is-size-110  is-using-gray-url" 
-					height="110" src="{{channel.logo}}" width="110">
+				<img alt="{{channel.name}}" class="channel-icon is-size-110  is-using-gray-url" 
+					height="110" src="{{channel['logo-bw']}}" width="110">
 			</a>
 			<a href="#">
 				<div class="channel_title">{{channel.name}}</div>
