--- a/public/index.html
+++ b/public/index.html
@@ -4,33 +4,34 @@
 <!-- <html ng-app="scotchTodo"> -->
 <html ng-app="e2eApp">
 <head>
+  <base href="/" />
 	<!-- META -->
   <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
   <meta content='text/html;charset=utf-8' http-equiv='content-type'>
   <meta content='Meshines' name='description'>
-  <link href='assets/images/meta_icons/favicon.ico' rel='shortcut icon' type='image/x-icon'>
-  <link href='assets/images/meta_icons/apple-touch-icon.png' rel='apple-touch-icon-precomposed'>
-  <link href='assets/images/meta_icons/apple-touch-icon-57x57.png' rel='apple-touch-icon-precomposed' sizes='57x57'>
-  <link href='assets/images/meta_icons/apple-touch-icon-72x72.png' rel='apple-touch-icon-precomposed' sizes='72x72'>
-  <link href='assets/images/meta_icons/apple-touch-icon-114x114.png' rel='apple-touch-icon-precomposed' sizes='114x114'>
-  <link href='assets/images/meta_icons/apple-touch-icon-144x144.png' rel='apple-touch-icon-precomposed' sizes='144x144'>
+  <link href='/assets/images/meta_icons/favicon.ico' rel='shortcut icon' type='image/x-icon'>
+  <link href='/assets/images/meta_icons/apple-touch-icon.png' rel='apple-touch-icon-precomposed'>
+  <link href='/assets/images/meta_icons/apple-touch-icon-57x57.png' rel='apple-touch-icon-precomposed' sizes='57x57'>
+  <link href='/assets/images/meta_icons/apple-touch-icon-72x72.png' rel='apple-touch-icon-precomposed' sizes='72x72'>
+  <link href='/assets/images/meta_icons/apple-touch-icon-114x114.png' rel='apple-touch-icon-precomposed' sizes='114x114'>
+  <link href='/assets/images/meta_icons/apple-touch-icon-144x144.png' rel='apple-touch-icon-precomposed' sizes='144x144'>
 
 	<title>Octoblu</title>
 
 	<!-- SCROLLS -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
-  <!-- <link href="assets/stylesheets/bootstrap.min.css" rel="stylesheet" media="screen"> -->
+  <!-- <link href="/assets/stylesheets/bootstrap.min.css" rel="stylesheet" media="screen"> -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-  <link href="assets/stylesheets/light-theme.css" media="all" id="color-settings-body-color" rel="stylesheet" type="text/css" />
-  <link href="assets/stylesheets/theme-colors.css" media="all" rel="stylesheet" type="text/css" />
-  <link href="assets/stylesheets/demo.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="/assets/stylesheets/light-theme.css" media="all" id="color-settings-body-color" rel="stylesheet" type="text/css" />
+  <link href="/assets/stylesheets/theme-colors.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="/assets/stylesheets/demo.css" media="all" rel="stylesheet" type="text/css" />
 
-  <link href="assets/stylesheets/erosIntro.css" rel="stylesheet" media="screen">
-  <link href="assets/stylesheets/style.css" rel="stylesheet" media="screen">
-  <link href="assets/stylesheets/custom.css" rel="stylesheet">
-  <link href="assets/stylesheets/animation.css" rel="stylesheet">
-  <link href="assets/stylesheets/font-awesome.min.css" rel="stylesheet" >
-  <link href="assets/stylesheets/athenaSlide.css" rel="stylesheet">
+  <link href="/assets/stylesheets/erosIntro.css" rel="stylesheet" media="screen">
+  <link href="/assets/stylesheets/style.css" rel="stylesheet" media="screen">
+  <link href="/assets/stylesheets/custom.css" rel="stylesheet">
+  <link href="/assets/stylesheets/animation.css" rel="stylesheet">
+  <link href="/assets/stylesheets/font-awesome.min.css" rel="stylesheet" >
+  <link href="/assets/stylesheets/athenaSlide.css" rel="stylesheet">
   <link rel="shortcut icon" href="images/favicon.png">
 
   <style type="text/css">
@@ -202,22 +203,22 @@
   <script src="http://code.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
   <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js" type="text/javascript"></script>
   <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js" type="text/javascript"></script>
-  <script src="assets/javascripts/plugins/jquery_ui_touch_punch/jquery.ui.touch-punch.min.js" type="text/javascript"></script>
-  <script src="assets/javascripts/jquery/jquery.cookie.js"></script>
-  <script src="assets/javascripts/jquery/jquery.mobile.custom.min.js" type="text/javascript"></script>
+  <script src="/assets/javascripts/plugins/jquery_ui_touch_punch/jquery.ui.touch-punch.min.js" type="text/javascript"></script>
+  <script src="/assets/javascripts/jquery/jquery.cookie.js"></script>
+  <script src="/assets/javascripts/jquery/jquery.mobile.custom.min.js" type="text/javascript"></script>
 
-  <script src="assets/javascripts/plugins/modernizr/modernizr.min.js" type="text/javascript"></script>
-  <script src="assets/javascripts/plugins/retina/retina.js" type="text/javascript"></script>
-  <script src="assets/javascripts/theme.js" type="text/javascript"></script>
+  <script src="/assets/javascripts/plugins/modernizr/modernizr.min.js" type="text/javascript"></script>
+  <script src="/assets/javascripts/plugins/retina/retina.js" type="text/javascript"></script>
+  <script src="/assets/javascripts/theme.js" type="text/javascript"></script>
 
-  <script src="assets/javascripts/plugins/validate/jquery.validate.min.js" type="text/javascript"></script>
-  <script src="assets/javascripts/plugins/validate/additional-methods.js" type="text/javascript"></script>
+  <script src="/assets/javascripts/plugins/validate/jquery.validate.min.js" type="text/javascript"></script>
+  <script src="/assets/javascripts/plugins/validate/additional-methods.js" type="text/javascript"></script>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-route.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-animate.js"></script>
 
-  <script src="assets/javascripts/bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
+  <script src="/assets/javascripts/bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 
 	<script src="/angular/app.js"></script>	
@@ -226,10 +227,10 @@
   <script src="/angular/directives.js"></script>
   <script src="http://skynet.im/js/skynet.js"></script>
 
-  <script src="assets/javascripts/athenaSlide.js"></script>
-  <script src="assets/javascripts/demeterScroll.js"></script>
+  <script src="/assets/javascripts/athenaSlide.js"></script>
+  <script src="/assets/javascripts/demeterScroll.js"></script>
 
-  <script type="text/javascript" src="assets/javascripts/canvasjs.min.js"></script>
+  <script type="text/javascript" src="/assets/javascripts/canvasjs.min.js"></script>
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
