working on api integration authorization

--- a/public/pages/api_detail.html
+++ b/public/pages/api_detail.html
@@ -1,5 +1,11 @@
 <div class="jumbotron text-center">
 
-  <h1>API Detail...</h1>
+  <div>
+    <img src="{{logo_url()}}" height="30px" /> &nbsp; <b>{{channel.name}}</b>
+  </div>
+
+  <div>
+    <button class="btn btn-default" xng-click="open()">Authenticate</button>
+  </div>
 
 </div>
