--- a/public/pages/devices.html
+++ b/public/pages/devices.html
@@ -40,6 +40,7 @@
           <div class="form-group">
             <input class="form-control" ng-model="key.value" placeholder="Value">
           </div>
+          <a href ng-click="removeKeyVals($index)"> <i class="icon-minus"></i></a>
           <a href ng-click="addKeyVals()"> <i class="icon-plus"></i></a>
 
         </div>
