--- a/public/pages/gateways.html
+++ b/public/pages/gateways.html
@@ -1,3 +1,7 @@
+<div>
+  <div class="pull-left"><strong>Your UUID is:</strong> {{skynetuuid}}</div>
+</div><br /><br />
+
 <div class='row'>
   <div class='col-sm-12 box'>
     <div class='box-header'>
