filtering api logo

--- a/public/pages/apis.html
+++ b/public/pages/apis.html
@@ -7,7 +7,7 @@
 		<div class="channel is-inactive" id="channel_83">
 			<a href="javascript:///">
 				<img alt="{{channel.name}}" class="channel-icon is-size-110  is-using-gray-url" 
-					height="110" src="{{channel['logo-bw']}}" width="110">
+					height="110" src="{{getLogoLink(channel)}}" width="110">
 			</a>
 			<a href="javascript:///">
 				<div class="channel_title">{{channel.name}}</div>
